# Microwall

./: README.md  pyproject.toml  rules.txt
microwall/: cli.py
microwall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
